assets/less/theme.less
//
// Load core variables and mixins
// --------------------------------------------------

@import "../bootstrap/less/normalize.less";
@import "../bootstrap/less/print.less";
@import "../bootstrap/less/variables.less";
@import "../bootstrap/less/mixins.less";
@import "../bootstrap/less/scaffolding.less";
@import "../bootstrap/less/utilities.less";
@import "../bootstrap/less/forms.less";
@import "../bootstrap/less/navs.less";
@import "../bootstrap/less/navbar.less";
@import "../bootstrap/less/buttons.less";
@import "../bootstrap/less/buttons.less";
@import "../bootstrap/less/button-groups.less";
@import "../bootstrap/less/dropdowns.less";

//
// Custom theme CSS
// --------------------------------------------------

//
// Color
// --------------------------------------------------
@portrait:        #ef5259;
@geographie:      #2db877;
@histoire:        #f1b847;
@urbanisme:       #a7d028;
@architecture:    #2dcfd5;
@atouts:          #7c4bb4;

//
// Map
// --------------------------------------------------
.leaflet-container {
  width:  100%;
  overflow: hidden;
  position: absolute;
  top: 100px;
  bottom: 210px;
}
#maplist img {
    width: 32px;
}

//
// Layout
// --------------------------------------------------
html, body {
  width: 100%;
  height: 100%;
}

#header {
  position: absolute;
  top: 0;
  width: 100%;
  height: 60px;
  background-color: @gray-lighter;

  .btn-group {
    position: relative;
    top: 10px;
    right: 10px;
  }
}
#teasing {
  position: absolute;
  left: 50%;
  right: 0;
  top: 30%;
  bottom: 20%;
  opacity: 0.8;
  background-color: #94363b;
  color: #fff;
  text-align: center;
  z-index: 1;
  padding: 10px 20px;

  h2 {
    text-transform: uppercase;
    border-bottom: 1px solid #fff;
    padding-bottom: 20px;
  }

  p {
    text-align: justify;
  }
}
#map-infos,
#map-photos {
  width: 50%;
  height: 150px;
  display: inline-block;
  padding: 15px;
  position: absolute;
  bottom: 60px;
}
#map-infos {
  color: #fff;
  left: 0;
}
body.portrait #map-infos {
  background-color: @portrait;
}
body.geographie #map-infos {
  background-color: @geographie;
}
body.histoire #map-infos {
  background-color: @histoire;
}
body.urbanisme #map-infos {
  background-color: @urbanisme;
}
body.architecture #map-infos {
  background-color: @architecture;
}
body.atouts #map-infos {
  background-color: @atouts;
}
#map-photos {
  background-color: #fff;
  right: 0;
}
#footer {
  width: 100%;
  position: absolute;
  bottom: 0;
  height: 60px;
  background-color: @gray-lighter;

  .address {
    display: inline-block;
    vertical-align: middle;
    padding: 10px;
  }

  #logos {
    list-style: none;
    margin: 0;

    li {
      float: left;
      padding: 5px 15px;

      img {
        height: 50px;
      }
    }
  }
}

//
// Bootstrap customization
// --------------------------------------------------
.navbar {
  position: absolute;
  top: 60px;
  width: 100%;
  min-height: 43px;

  ul {
    margin: 0;

    li {
      background-color: @body-bg;

      a {
        color: @text-color;
      }
    }
  }
}
.navbar-collapse {
  padding-left: 0;
  padding-right: 0;
}
.navbar ul, .nav-tabs {

  li {
    background-repeat: no-repeat;
    background-position: 30% center;
  }

  li.portrait {
    background-image: url('images/ic_portrait_off.png');
  }
  li.geographie {
    background-image: url('images/ic_geo_off.png');
    background-position: 25% center;
  }
  li.histoire {
    background-image: url('images/ic_histoire_off.png');
  }
  li.urbanisme {
    background-image: url('images/ic_urban_off.png');
    background-position: 25% center;
  }
  li.architecture {
    background-image: url('images/ic_architecture_off.png');
    background-position: 25% center;
  }
  li.atouts {
    background-image: url('images/ic_atouts_off.png');
  }

  li:hover,
  li.active,
  li:hover > a,
  li.active > a {
    color: #fff;
    background-repeat: no-repeat;
    background-position: 30% center;
  }
  
  li.portrait:hover,
  li.portrait.active,
  li.portrait:hover > a,
  li.portrait.active > a {
    background-color: @portrait;
    background-image: url('images/ic_portrait_on.png');
  }
  li.geographie:hover,
  li.geographie.active,
  li.geographie:hover > a,
  li.geographie.active > a {
    background-color: @geographie;
    background-image: url('images/ic_geo_on.png');
    background-position: 25% center;
  }
  li.histoire:hover,
  li.histoire.active,
  li.histoire:hover > a,
  li.histoire.active > a {
    background-color: @histoire;
    background-image: url('images/ic_histoire_on.png');
  }
  li.urbanisme:hover,
  li.urbanisme.active,
  li.urbanisme:hover > a,
  li.urbanisme.active > a {
    background-color: @urbanisme;
    background-image: url('images/ic_urban_on.png');
    background-position: 25% center;
  }
  li.architecture:hover,
  li.architecture.active,
  li.architecture:hover > a,
  li.architecture.active > a {
    background-color: @architecture;
    background-image: url('images/ic_architecture_on.png');
    background-position: 25% center;
  }
  li.atouts:hover,
  li.atouts.active,
  li.atouts:hover > a,
  li.atouts.active > a {
    background-color: @atouts;
    background-image: url('images/ic_atouts_on.png');
  }
}
button.dropdown-toggle.color {
  background-color: #ca1a32;
}
.btn-default .caret {
  border-top-color: #fff;
}
ul.dropdown-menu {
  z-index: 1001;
}

